--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^8.3.1",
     "nodemailer": "^6.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
